--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
     <div class="selector">
         <p class="cardtitles">FIGHTERS</p>
         <div class="cardrow">
-            <img id="c1" src="stuff/1/img.png" onmouseenter="refresh('1')" alt="dummy" class="selection" height="100%">
+            <img src="stuff/1/img.png" onmouseenter="refresh('1')" alt="dummy" class="selection" height="100%">
             <img src="stuff/2/img.png" onmouseenter="refresh('2')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
-            <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
+            <img src="stuff/4/img.png" onmouseenter="refresh('4')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
@@ -344,7 +344,7 @@
 
 <script>
 
-    const donecards = ["1", "2", "10", "11", "15", "16", "17", "51", "54", "55", "56"];
+    const donecards = ["1", "2", "4", "10", "11", "15", "16", "17", "51", "54", "55", "56"];
     let tab = donecards[Math.floor(Math.random() * donecards.length)];
 
     async function stringFromFile(f) {
