--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <img src="stuff/4/img.png" onmouseenter="refresh('4')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
-            <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
+            <img src="stuff/7/img.png" onmouseenter="refresh('7')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
             <img src="stuff/9/img.png" onmouseenter="refresh('9')" alt="dummy" class="selection" height="100%">
             <img src="stuff/10/img.png" onmouseenter="refresh('10')" alt="dummy" class="selection" height="100%">
@@ -344,7 +344,7 @@
 
 <script>
 
-    const donecards = ["1", "2", "4", "9", "10", "11", "15", "16", "17", "51", "52", "54", "55", "56"];
+    const donecards = ["1", "2", "4", "7", "9", "10", "11", "15", "16", "17", "51", "52", "54", "55", "56"];
     let tab = donecards[Math.floor(Math.random() * donecards.length)];
 
     async function stringFromFile(f) {
