--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <div class="cardrow">
             <img src="stuff/51/img.png" onmouseenter="refresh('51')" alt="dummy" class="selection" height="100%">
             <img src="stuff/52/img.png" onmouseenter="refresh('52')" alt="dummy" class="selection" height="100%">
-            <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
+            <img src="stuff/53/img.png" onmouseenter="refresh('53')" alt="dummy" class="selection" height="100%">
             <img src="stuff/54/img.png" onmouseenter="refresh('54')" alt="dummy" class="selection" height="100%">
             <img src="stuff/55/img.png" onmouseenter="refresh('55')" alt="dummy" class="selection" height="100%">
             <img src="stuff/56/img.png" onmouseenter="refresh('56')" alt="dummy" class="selection" height="100%">
@@ -344,7 +344,7 @@
 
 <script>
 
-    const donecards = ["1", "2", "4", "7", "9", "10", "11", "15", "16", "17", "51", "52", "54", "55", "56"];
+    const donecards = ["1", "2", "4", "7", "9", "10", "11", "15", "16", "17", "51", "52", "53", "54", "55", "56"];
     let tab = donecards[Math.floor(Math.random() * donecards.length)];
 
     async function stringFromFile(f) {
