--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
-            <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
+            <img src="stuff/41/img.png" onmouseenter="refresh('41')" alt="dummy" class="selection" height="100%">
             <img src="stuff/42/img.png" onmouseenter="refresh('42')" alt="dummy" class="selection" height="100%">
             <img src="stuff/43/img.png" onmouseenter="refresh('43')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
@@ -344,7 +344,7 @@
 
 <script>
 
-    const donecards = ["1", "2", "4", "7", "9", "10", "11", "15", "16", "17", "51", "52", "53", "54", "55", "56"];
+    const donecards = ["1", "2", "4", "7", "9", "10", "11", "15", "16", "17", "41", "51", "52", "53", "54", "55", "56"];
     let tab = donecards[Math.floor(Math.random() * donecards.length)];
 
     async function stringFromFile(f) {
