--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="cardrow">
             <img src="stuff/1/img.png" onmouseenter="refresh('1')" alt="dummy" class="selection" height="100%">
             <img src="stuff/2/img.png" onmouseenter="refresh('2')" alt="dummy" class="selection" height="100%">
-            <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
+            <img src="stuff/3/img.png" onmouseenter="refresh('3')" alt="dummy" class="selection" height="100%">
             <img src="stuff/4/img.png" onmouseenter="refresh('4')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
@@ -344,7 +344,7 @@
 
 <script>
 
-    const donecards = ["1", "2", "4", "7", "9", "10", "11", "15", "16", "17", "41", "51", "52", "53", "54", "55", "56"];
+    const donecards = ["1", "2", "3", "4", "7", "9", "10", "11", "15", "16", "17", "41", "51", "52", "53", "54", "55", "56"];
     let tab = donecards[Math.floor(Math.random() * donecards.length)];
 
     async function stringFromFile(f) {
