--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <img src="stuff/15/img.png" onmouseenter="refresh('15')" alt="dummy" class="selection" height="100%">
             <img src="stuff/16/img.png" onmouseenter="refresh('16')" alt="dummy" class="selection" height="100%">
             <img src="stuff/17/img.png" onmouseenter="refresh('17')" alt="dummy" class="selection" height="100%"> 
-            <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
+            <img src="stuff/18/img.png" onmouseenter="refresh('18')" alt="dummy" class="selection" height="100%">
             <img src="stuff/19/img.png" onmouseenter="refresh('19')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
