--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <img src="stuff/11/img.png" onmouseenter="refresh('11')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
-            <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
+            <img src="stuff/14/img.png" onmouseenter="refresh('14')" alt="dummy" class="selection" height="100%">
             <img src="stuff/15/img.png" onmouseenter="refresh('15')" alt="dummy" class="selection" height="100%">
             <img src="stuff/16/img.png" onmouseenter="refresh('16')" alt="dummy" class="selection" height="100%">
             <img src="stuff/17/img.png" onmouseenter="refresh('17')" alt="dummy" class="selection" height="100%"> 
@@ -344,7 +344,7 @@
 
 <script>
 
-    const donecards = ["1", "2", "3", "4", "7", "9", "10", "11", "15", "16", "17", "19", "41", "51", "52", "53", "54", "55", "56"];
+    const donecards = ["1", "2", "3", "4", "7", "9", "10", "11", "14", "15", "16", "17", "19", "41", "51", "52", "53", "54", "55", "56"];
     let tab = donecards[Math.floor(Math.random() * donecards.length)];
 
     async function stringFromFile(f) {
