--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <img src="stuff/18/img.png" onmouseenter="refresh('18')" alt="dummy" class="selection" height="100%">
             <img src="stuff/19/img.png" onmouseenter="refresh('19')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
-            <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
+            <img src="stuff/21/img.png" onmouseenter="refresh('21')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
             <img src="stuff/unknown/img.png" onmouseenter="refresh('unknown')" alt="dummy" class="selection" height="100%">
@@ -344,7 +344,7 @@
 
 <script>
 
-    const donecards = ["1", "2", "3", "4", "7", "9", "10", "11", "14", "15", "16", "17", "19", "41", "51", "52", "53", "54", "55", "56"];
+    const donecards = ["1", "2", "3", "4", "7", "9", "10", "11", "14", "15", "16", "17", "19", "21", "41", "51", "52", "53", "54", "55", "56"];
     let tab = donecards[Math.floor(Math.random() * donecards.length)];
 
     async function stringFromFile(f) {
